# doc-generator

./: .gitignore  CLAUDE.md  README.md  SKILL.md  install.sh  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  sync-skill.yml
assets/: invoice.css  purchase_order.css  request_for_quotation.css  style.css
assets/density/: comfortable.css  compact.css
builders/: __init__.py  _shared.py  invoice.py  purchase_order.py  request_for_quotation.py
core/: __init__.py  generate.py
docs/: PRD.md  PUBLISHING.md  future_features.md  plan-column-labels.md  plan-multi-currency.md  plan-multi-language.md  security-review-2026-03-16.md
docs/decisions/: 001-decimal-for-money.md  002-python-only-formatting.md  003-file-path-payload.md  004-argparse-only-cli.md  005-skill-marketplace-publishing.md  006-logo-data-uri-only.md
references/: DESIGN_SYSTEM.md  ERRORS.md  EXTENDING.md  NEW_DOC_TYPE.md  PROTOCOL.md  invoice.md  po_terms_conditions.md  purchase_order.md  request_for_quotation.md
schemas/: __init__.py  base.py  invoice.py  purchase_order.py  request_for_quotation.py
scripts/: encode_logo.py  generate.py  setup.sh
templates/: _macros.html  base.html  invoice.html  purchase_order.html  request_for_quotation.html
tests/: test_builders.py  test_encode_logo.py  test_integration.py  test_registry.py  test_schemas.py  test_shared_builders.py  test_utils.py
tests/fixtures/: invalid_invoice.json  invalid_po.json  invalid_rfq.json  sample_po.json  (+8 more)
utils/: __init__.py  constants.py  file_naming.py  formatting.py  logo.py  paths.py  preview.py
