[project]
name = "doc-generator"
version = "0.1.0"
description = "Deterministic PDF generation for business documents (POs, Invoices, etc.) — invocable by any AI agent via CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
